removed hidden overflow of multiple parent containers to fix cropped tooltip

--- a/src/extension/webview/components/AssertionContainer.css
+++ b/src/extension/webview/components/AssertionContainer.css
@@ -1,7 +1,6 @@
 .ms-assertion-container-wrapper {
     height: fit-content;
     width: 100%;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     margin-top: 1em;
