--- a/src/extension/webview/components/Tooltips.css
+++ b/src/extension/webview/components/Tooltips.css
@@ -17,7 +17,6 @@
     bottom: 150%;
     left: 50%;
     margin-left: -7.5em;
-    overflow: hidden;
 }
 
 .tooltip .tooltiptext::after {
